<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:elevation="20dp"
            android:radius="20dp"
            app:cardBackgroundColor="#40DFDDDD">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/newAirplane"
                        android:textColor="#DD2C00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/add_airplane_model"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/model"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/add_airplane_manufacturing_date"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/manufacturingDate"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/add_airplane_passenger_capacity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/passengerCapacity"
                        android:inputType="number|numberDecimal" />

                    <EditText
                        android:id="@+id/add_airplane_max_speed"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/maxSpeed"
                        android:inputType="number|numberDecimal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/add_airplane_active"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/active" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/airplane_register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="createAirport"
                        android:text="@string/register" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>