<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:elevation="20dp"
            android:radius="20dp"
            app:cardBackgroundColor="#40DFDDDD">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/newAirport"
                        android:textColor="#1F9997"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airport_name_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_airport_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airport_city_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:hint="@string/city"
                        android:inputType="text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_airport_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_airport_foundation_year_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/foundationYearEdit"
                        android:inputType="text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_airport_foundation_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <EditText
                        android:id="@+id/add_airport_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/latitude"
                        android:inputType="number|numberDecimal" />

                    <EditText
                        android:id="@+id/add_airport_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:hint="@string/longitude"
                        android:inputType="number|numberDecimal" />

                    <CheckBox
                        android:id="@+id/add_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active" />

                    <com.mapbox.maps.MapView
                        android:id="@+id/add_mapView"
                        android:layout_width="match_parent"
                        android:layout_height="158dp"
                        app:mapbox_cameraTargetLat="40.7128"
                        app:mapbox_cameraTargetLng="-74.0060"
                        app:mapbox_cameraZoom="9.0">

                    </com.mapbox.maps.MapView>

                    <Button
                        android:id="@+id/airport_register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="createAirport"
                        android:text="@string/register" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>