<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="20dp"
            android:radius="20dp"
            app:cardBackgroundColor="#40DFDDDD"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="20dp"
                        android:text="@string/editAirplane"
                        android:textColor="#DD2C00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airplane_model_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/model">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_airplane_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airplane_manufacturing_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/manufacturingDateEdit">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_airplane_manufacturing_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airplane_passenger_capacity_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/passengerCapacity">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_airplane_passenger_capacity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airplane_max_speed_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/maxSpeed">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_airplane_max_speed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number|numberDecimal"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/airplane_airline_id_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/airlineId">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_airplane_airline_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <CheckBox
                        android:id="@+id/edit_airplane_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active" />

                    <Button
                        android:id="@+id/airplane_edit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF6D00"
                        android:onClick="editOneAirplane"
                        android:text="@string/edit" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>