<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <Button
        android:id="@+id/index_favorites"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="goListFavorites"
        android:padding="25dp"
        android:text="@string/favorite"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/index_airplanes" />

    <Button
        android:id="@+id/index_airplanes"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="goListAirplanes"
        android:padding="25dp"
        android:text="@string/airplanes"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/index_airports" />

    <Button
        android:id="@+id/index_airports"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="goListAirports"
        android:padding="25dp"
        android:text="@string/airports"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>