<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/maxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/maxSpeed"
        android:textColor="#D50000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airplane_item_fav_passenger_capacity" />

    <TextView
        android:id="@+id/PassengerCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/passengerCapacity"
        android:textColor="#D50000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airplane_item_fav_model" />

    <TextView
        android:id="@+id/airplane_item_fav_id"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airplane_item_fav_model"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/airplane_item_fav_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airplane_item_fav_passenger_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassengerCapacity" />

    <TextView
        android:id="@+id/airplane_item_fav_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxSpeed" />

    <ImageView
        android:id="@+id/airplane_item_fav_star"
        android:layout_width="97dp"
        android:layout_height="77dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fav_lleno" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/comment"
        android:textColor="#D50000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airplane_item_fav_speed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/airplane_item_fav_comment"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/airplane_fav_items_edit_text"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/write" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/airplane_item_fav_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <Button
        android:id="@+id/airplane_fav_new_coment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>